	detected potential URI; they occasionally missed URI when there
	was more than one in the decode buffer. Fixed several decode
	newline issues. Added mime-eicar-test.sh regression test that
	checks both CRLF and LF newlines.

   !	mime-eicar-*.eml: changed to use GTUBE test file which won't
   	trigger AV scanners when emailing/downloading libsnert.

--1.71.2--

   !	uri.c: fixed uri CLI when parsing a URL that uses & delimiters
   	but no query string delimiter, eg.

   	http://dect.myspace.com/event.ng/Type=click&Redirect=http://pillenhaus.ch

   !	dnsListIsNameListed: fixed test to limit matches to 127.0.0.0/8
	or 0.0.0.0/8. Was testing the wrong value, which was in host
	byte order instead of network byte order. isReservedIPv4 would
	then convert the value to host byte order, thinking it was in
	network order, which of course reversed it.

--1.71.1--

   !	mimeStateBoundary: when crossing a MIME boundary issue an EOF
   	to force any cleanup, before starting the next MIME part.

   !	dnsListCreate: Assert that the DNS list suffixes are rooted, ie.
	terminated by a dot. This will prevent wildcard lookups when
	resolv.conf specifies a 'search domain.com' pragma and
	domain.com has a wildcard entry then any NXDOMAIN returns result
	in .domain.com being added to the end of the lookup and the
	wildcard being returned. Reported by Steve Freegard for
	netground.nl.

   !	dnsListIsNameListed: only return a match for values that are
   	either 127.0.0.0/8 or 0.0.0.0/8.

   !	uri.c: added "email:", "mail:", and "from:" as pusedo schemes to
	the schemes table in order to catch instances of:

		email:user@domain.com		(explicit)
	vs
		email: user@domain.com		(implicit)

   !	mime.c/h: complete overhaul of MIME API and testing tool to deal
	with several parsing and decoding bugs.

	The issues addressed by this major revision relate to a change
	in design assumptions made in previous builds by the decoupling
	of source and decode buffers. As a result several key points of