@@ -283,8 +283,8 @@ uri.txt: uri=http://[2001:0DB8::1234]:8008
 	scheme=http
 	schemeInfo=//[2001:0DB8::1234]:8008
 	userInfo=(NULL)
-	host=(NULL)
-	port=80
+	host=[2001:0DB8::1234]
+	port=8008
 	path=(NULL)
 	query=(NULL)
 	fragment=(NULL)
@@ -293,8 +293,8 @@ uri.txt: uri=http://[2001:0DB8::192.0.2.99]:8008
 	scheme=http
 	schemeInfo=//[2001:0DB8::192.0.2.99]:8008
 	userInfo=(NULL)
-	host=(NULL)
-	port=80
+	host=[2001:0DB8::192.0.2.99]
+	port=8008
 	path=(NULL)
 	query=(NULL)
 	fragment=(NULL)
